# slack-coach

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  environment.py  pyproject.toml  routing.yml  webhook_test.sh
.diagrams/: fireflies-slack-pipeline.html  slack-coach-interactions.html
.github/prompts/: security-scan.prompt.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-receive-and-format/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-route/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
app/: cron-runner.sh  entrypoint.sh  fireflies.py  formatter.py  main.py  review.py  router.py  server.py  slack.py  socket_server.py  votes.py
docs/: deployment.md  routing.md
scripts/: deploy.sh  get-ngrok-url.sh  ngrok.service  prepare_slack_image.py  run-daily-coach.sh
systemd/: sqlcoach.service  sqlcoach.timer
tests/: conftest.py  test_channel_dedupe_votes.py  test_channel_isolation.py  test_feedback_vote_separation.py  test_fireflies_webhook.py  test_formatter.py  test_main.py  test_real_world_scenario.py  test_review.py  test_router.py  test_slack_post.py  test_socket_server_review.py
(+8 files in other folders)
