[project]
name = "slack-coach"
version = "0.1.0"
description = ""
authors = [
    {name = "darren.rooney",email = "darren.rooney101587@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
boto3="1.34.0"
requests="=2.31.0"
PyYAML="6.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
