[tool.poetry]
name = "slack-coach"
version = "0.1.0"
description = ""
authors = ["darren.rooney <darren.rooney101587@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
boto3 = "1.34.0"
requests = "2.31.0"
PyYAML = "6.0.0"
Flask = "2.3.3"
slack-bolt = "^1.20.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
